--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		
 		// Declare global variables.
 		let timeline;
-		let timelineDays = [];
+		let timelineDays;
 		
 		// Create the static parts of the page:
 		drawTimeline();
