Weather icons complete

--- a/about.html
+++ b/about.html
@@ -62,6 +62,12 @@
 				TODO: update this section
 			</p>
 		</div>
+		<div class="pagesubtitle">Credits</div>
+		<div class="pagetext">
+			<p>
+				Weather icons courtesy <a href="http://weathericons.io/">http://weathericons.io/</a>.
+			</p>
+		</div>
 	</div>
 </body>
 
