--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<meta charset="utf-8">
 	<title>ckixd - Outdoor Exhibit Survey</title>
 	<link type="text/css" rel="stylesheet" href="exhibit.css"/>
-	<link type="text/css" rel="stylesheet" href="css/weather-icons.css"/> // TODO: If these work, give credit on About page.
+	<link type="text/css" rel="stylesheet" href="css/weather-icons.css"/>
 	<script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
 	<script type="text/javascript" src="timeline.js"></script>
 	<style>
 		svg .weathericon {
 			font-family: WeatherIcons;
-			fill: red;
+			font-size: 20px;
+			fill: black;
 		}
 	
 		svg .graphline {
