--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		let SLE_data;
 		
 		// Create the static parts of the page:
-		drawTimeline();
+		drawTimelineStaticParts();
 		// TODO: Draw the filter buttons
 		// TODO: Draw the map 
 		// TODO: Draw the age group bar chart frame
@@ -103,6 +103,7 @@
 				console.log(error); //Log the error.
 			} else { //If no error, the file loaded correctly. Yay!
 				SLE_data = d;
+				console.dir(SLE_data[0]); // TODO: Remove this later - right now it's just here to confirm that the data loaded.
 				loadTimelineSurveyData();
 				refreshSurveyData();
 			}
