Starting to preprocess survey data for timeline

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 		const BUTTON_PADDING = 10;
 		
 		// Declare global variables.
-		let timeline;
-		let timelineDays;
-		let SLE_data;
+		let timeline; // The SVG area for the timeline graph.
+		let timelineDays; // An array containing all data displayed on the timeline.
+		let SLE_data; // An array containing all the survey data.
 		
 		// Create the static parts of the page:
 		drawTimelineStaticParts();
