Updated weather data and display

--- a/about.html
+++ b/about.html
@@ -65,7 +65,10 @@
 		<div class="pagesubtitle">Credits</div>
 		<div class="pagetext">
 			<p>
-				Weather icons courtesy <a href="http://weathericons.io/">http://weathericons.io/</a>.
+				Historical weather data courtesy <a href="https://www.wunderground.com/">Weather Underground</a>.
+			</p>
+			<p>
+				Weather icons courtesy <a href="http://weathericons.io/">the Weather Icons project by Eric Flowers</a>.
 			</p>
 		</div>
 	</div>
