--- a/SLEchart.html
+++ b/SLEchart.html
@@ -3,13 +3,13 @@
 
 <head>
 <!-- Plotly.js -->
-<script src="d3.v3.min.js" type="text/javascript"></script>
-<script src="plotly-latest.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 
 <body>
 
-<div id="myDiv" style="width: 700px; height: 500px;">
+<div id="myDiv" style="width: 440px; height: 330px;">
 	
 <script>
     var A = [];
