--- a/index copy.html
+++ b/index copy.html
@@ -57,7 +57,7 @@
 .box1{
   background: #2db34a;
   float: left;
-  margin: 0.5%;
+  margin: 0.1%;
   width: 58.0%;
   height: 50%;
 
@@ -65,13 +65,14 @@
 .box2{
   background: gray;
   float: left;
-  margin: 0.5%;
+  margin: 0.1%;
   width: 100%;
   height: 50%;
 
 }  
 #frame {
         -ms-zoom: 0.75;
+        
         -moz-transform: scale(0.75);
         -moz-transform-origin: 0 0;
         -o-transform: scale(0.75);
@@ -85,10 +86,10 @@
 </head>
 <body>
 <iframe  src="index.html" width="55%" height ="350" name="timeline">Timeline</iframe>
-<iframe  class="box" src="Ages.html" width="39%" height ="350" name="agebarchart">AGE Barchart</iframe>
-<iframe  class="box" src="SLEchart.html" width="39%" height ="360" name="SLEbarchart">SLE Barchart</iframe>
+<iframe  class="box" src="Ages.html" width="39%" height ="350" name="agebarchart" frameBorder="0">AGE Barchart</iframe>
+<iframe  class="box" src="SLEchart.html" width="39%" height ="360" name="SLEbarchart" frameBorder="0">SLE Barchart</iframe>
 
-<iframe id="map" src="statesmap.html" width="59%" height ="400">map</iframe>
+<iframe id="map" src="statesmap.html" width="59%" height ="400" frameBorder="0">map</iframe>
 
 <!-- 
 <div class="box-set">
