--- a/index copy.html
+++ b/index copy.html
@@ -69,7 +69,8 @@
   width: 100%;
   height: 50%;
 
-}  
+} 
+#frame { zoom: 0.75; -moz-transform: scale(0.75); -moz-transform-origin: 0 0; } 
 #frame {
         -ms-zoom: 0.75;
         
