--- a/index copy.html
+++ b/index copy.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>ckixd - Outdoor Exhibit Survey</title>
+	<title>Outdoor Exhibit Survey</title>
+	<h3> A Children's Museum's Customer Outdoor Exhibit Survey </h2>
 	<link type="text/css" rel="stylesheet" href="exhibit.css"/>
 	<link type="text/css" rel="stylesheet" href="style.css"/>
 	<link type="text/css" rel="stylesheet" href="css/weather-icons.css"/>
