--- a/Ages.html
+++ b/Ages.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <meta charset="utf-8">
 
 <head>
@@ -226,8 +226,8 @@
 
             }
 
-            thisSum[0] = (thisSum[0] / 687) * 100;
-            thisSum[1] = (thisSum[1] / 687) * 100;
+            thisSum[0] = Math.round(((thisSum[0] / 687) * 100)*100)/100;
+            thisSum[1] = Math.round(((thisSum[1] / 687) * 100)*100)/100;
 
 
             return thisSum;
@@ -241,7 +241,7 @@
             x: ['0-10', '11-20', '21-40', '41-60', '61-80', '>80'],
 
             y: A,
-            name: 'Members',
+            name: '% of Members',
             marker: {
                 color: '#2c7fb8'
             },
@@ -251,7 +251,7 @@
         var trace2 = {
             x: ['0-10', '11-20', '21-40', '41-60', '61-80', '>80'],
             y: B,
-            name: 'Non-members',
+            name: '% of Non-members',
             marker: {
                 color: '#e34a33'
             },
@@ -268,6 +268,10 @@
                     color: '#636363'
                 }
             },
+             yaxis:{ title: 'Percentage of visitors',
+  			range: [0,45]
+  			},
+
             xaxis: {
                 title: 'Age Group',
                 titlefont: {
