--- a/index_copy.html
+++ b/index_copy.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Outdoor Exhibit Survey</title>
-	<h3> A Children's Museum's Customer Outdoor Exhibit Survey </h2>
+	<h3> A Children's Museum's Visitors Survey </h2>
 	<link type="text/css" rel="stylesheet" href="exhibit.css"/>
 	<link type="text/css" rel="stylesheet" href="style.css"/>
 	<link type="text/css" rel="stylesheet" href="css/weather-icons.css"/>
@@ -87,7 +87,7 @@
 
 </head>
 <body>
-<iframe  src="index.html" width="55%" height ="350" name="timeline">Timeline</iframe>
+<iframe  src="timeline.html" width="55%" height ="350" name="timeline">Timeline</iframe>
 <iframe  class="box" src="Ages.html" width="39%" height ="350" name="agebarchart" frameBorder="0">AGE Barchart</iframe>
 <iframe  class="box" src="SLEchart.html" width="39%" height ="360" name="SLEbarchart" frameBorder="0">SLE Barchart</iframe>
 
