--- a/SLEchart.html
+++ b/SLEchart.html
@@ -231,8 +231,8 @@ function getSumOfArray(array1, array2, array3, Marion, Adjacent, Elsewhere, Out)
 
             }
 
-            thisSum[0] = (thisSum[0] / 687) * 100;
-            thisSum[1] = (thisSum[1] / 687) * 100;
+            thisSum[0] = Math.round((thisSum[0] / 687) * 100);
+            thisSum[1] = Math.round((thisSum[1] / 687) * 100);
 
             return thisSum;
         }
