--- a/Ages.html
+++ b/Ages.html
@@ -226,8 +226,8 @@
 
             }
 
-            thisSum[0] = (thisSum[0] / 687) * 100;
-            thisSum[1] = (thisSum[1] / 687) * 100;
+            thisSum[0] = Math.round((thisSum[0] / 687) * 100);
+            thisSum[1] = Math.round((thisSum[1] / 687) * 100);
 
 
             return thisSum;
