--- a/index_copy.html
+++ b/index_copy.html
@@ -87,7 +87,7 @@
 
 </head>
 <body>
-<iframe  src="timeline.html" width="55%" height ="350" name="timeline">Timeline</iframe>
+<iframe  src="https://ckixd.com/outdoor" width="55%" height ="350" name="timeline">Timeline</iframe>
 <iframe  class="box" src="Ages.html" width="39%" height ="350" name="agebarchart" frameBorder="0">AGE Barchart</iframe>
 <iframe  class="box" src="SLEchart.html" width="39%" height ="360" name="SLEbarchart" frameBorder="0">SLE Barchart</iframe>
 
