--- a/Ages.html
+++ b/Ages.html
@@ -3,8 +3,8 @@
 
 <head>
 <!-- Plotly.js -->
-<script src="d3.v3.min.js" type="text/javascript"></script>
-<script src="plotly-latest.min.js"></script>
+	<script type="text/javascript" src="d3.v3.min.js"></script>
+	<script type="text/javascript" src="plotly-latest.min.js"></script>
 </head>
 
 <body>
