--- a/Ages.html
+++ b/Ages.html
@@ -3,8 +3,8 @@
 
 <head>
 <!-- Plotly.js -->
-	<script type="text/javascript" src="d3.v3.min.js"></script>
-	<script type="text/javascript" src="plotly-latest.min.js"></script>
+	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<script type="text/javascript" src="lib/plotly-latest.min.js"></script>
 </head>
 
 <body>
