--- a/SLEchart.html
+++ b/SLEchart.html
@@ -3,8 +3,8 @@
 
 <head>
 <!-- Plotly.js -->
-<script src="d3.v3.min.js" type="text/javascript"></script>
-<script src="plotly-latest.min.js"></script>
+	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<script type="text/javascript" src="lib/plotly-latest.min.js"></script>
 </head>
 
 <body>
