--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<link type="text/css" rel="stylesheet" href="timeline.css"/>
 	<link type="text/css" rel="stylesheet" href="style.css"/>
 	<link type="text/css" rel="stylesheet" href="css/weather-icons.css"/>
-	<script type="text/javascript" src="d3.v3.min.js"></script>
-	<script type="text/javascript" src="plotly-latest.min.js"></script>
+	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<script type="text/javascript" src="lib/plotly-latest.min.js"></script>
 	<script type="text/javascript" src="timeline.js"></script>
 	<style>
 		.box-set {
