Moved css files into their own folder.

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>ckixd - Outdoor Exhibit Survey - About</title>
-	<link type="text/css" rel="stylesheet" href="exhibit.css"/>
+	<link type="text/css" rel="stylesheet" href="css/timeline.css"/>
 	<style>
 	</style>
 </head>
