--- a/statesmap.html
+++ b/statesmap.html
@@ -10,7 +10,7 @@
 <!-- Topojson -->
 <script src="https://d3js.org/topojson.v2.min.js"></script>
 <!-- Custom CSS styles -->
-<link href="style.css" rel="stylesheet" type="text/css" >
+<link href="css/style.css" rel="stylesheet" type="text/css" >
 </head>
 
 
