--- a/index.html
+++ b/index.html
@@ -3,47 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<title>Outdoor Exhibit Survey</title>
-	<link type="text/css" rel="stylesheet" href="timeline.css"/>
-	<link type="text/css" rel="stylesheet" href="style.css"/>
+	<link type="text/css" rel="stylesheet" href="css/timeline.css"/>
+	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 	<link type="text/css" rel="stylesheet" href="css/weather-icons.css"/>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<script type="text/javascript" src="lib/plotly-latest.min.js"></script>
 	<script type="text/javascript" src="timeline.js"></script>
 	<style>
-		.box-set {
-			background: #eaeaed;
-		}
+		<!-- Used only for iFrames, which we need to replace to integrate the graphs. -->
 		.box {
 		  float: right;
-
 		}
-		.box1{
-		  background: #2db34a;
-		  float: left;
-		  margin: 0.1%;
-		  width: 58.0%;
-		  height: 50%;
-
-		}
-		.box2{
-		  background: gray;
-		  float: left;
-		  margin: 0.1%;
-		  width: 100%;
-		  height: 50%;
-
-		} 
-		#frame { zoom: 0.75; -moz-transform: scale(0.75); -moz-transform-origin: 0 0; } 
-		#frame {
-				-ms-zoom: 0.75;
-				
-				-moz-transform: scale(0.75);
-				-moz-transform-origin: 0 0;
-				-o-transform: scale(0.75);
-				-o-transform-origin: 0 0;
-				-webkit-transform: scale(0.75);
-				-webkit-transform-origin: 0 0;
-			}         
 	</style>
 </head>
 <body>
