Moved data files to their own folder.

--- a/Ages.html
+++ b/Ages.html
@@ -19,7 +19,7 @@
     var B4 = true;
 
 
-    d3.csv('SurveyData.csv', function(data) {
+    d3.csv('data/SurveyData.csv', function(data) {
 
           var sumArray = [];
           var id_Array = [];
