--- a/SLEchart.html
+++ b/SLEchart.html
@@ -21,7 +21,7 @@
     
 
 
-    d3.csv('SurveyData.csv', function(data) {
+    d3.csv('data/SurveyData.csv', function(data) {
 
           var sumArray = [];
           var id_Array = [];
