Referencing timeline locally rather than remotely.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 </div>
 
-<iframe  src="https://ckixd.com/outdoor" width="59%" height ="350" name="timeline">Timeline</iframe>
+<iframe  src="timeline.html" width="59%" height ="350" name="timeline">Timeline</iframe>
 
 <iframe  class="box" src="Ages.html" width="39%" height ="350" name="agebarchart" frameBorder="0">AGE Barchart</iframe>
 
