--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link type="text/css" rel="stylesheet" href="css/timeline.css"/>
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 	<link type="text/css" rel="stylesheet" href="css/weather-icons.css"/>
-	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
 	<script type="text/javascript" src="lib/plotly-latest.min.js"></script>
 	<script type="text/javascript" src="timeline.js"></script>
 	<style>
