--- a/timeline.html
+++ b/timeline.html
@@ -5,6 +5,7 @@
 	<title>ckixd - Outdoor Exhibit Survey</title>
 	<link type="text/css" rel="stylesheet" href="css/timeline.css"/>
 	<link type="text/css" rel="stylesheet" href="css/weather-icons.css"/>
+	<!--<script src="https://d3js.org/d3.v4.min.js"></script>-->
 	<script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
 	<script type="text/javascript" src="timeline.js"></script>
 	<style>
