Updated timeline code to work with D3 version 4

--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
 		</p>
 	</div>
 </div>
+
 <div id="vis">
+	<!-- This is how I set up side-by-side displays for project 1.
+		<svg id="map" width="49%" viewBox="0 0 500 500">
+		</svg>
+		<svg id="graph" width="49%" viewBox="0 0 500 500">
+			<text id='label' x='5' y='20'>Deaths per day</text>
+		</svg>
+	-->
+	
+	
 
 </div>
 
