--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 	<link type="text/css" rel="stylesheet" href="css/weather-icons.css"/>
 	<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
+	<script type="text/javascript" src="https://d3js.org/topojson.v2.min.js"></script>
 	<script type="text/javascript" src="lib/plotly-latest.min.js"></script>
 	<script type="text/javascript" src="timeline.js"></script>
 	<style>
@@ -17,6 +18,7 @@
 	</style>
 </head>
 <body>
+
 
 <div id="heading">
 	<div class="pagetitle" style="float: left;">Outdoor Exhibit Survey</div>
@@ -43,7 +45,15 @@
 		</svg>
 	-->
 	
-	<div id="timeline">
+	<div id="map">
+		<!-- TODO: Why does the map draw itself over the timeline if the map SVG isn't declared first? -->
+		<svg width="1000" height="600"></svg>
+		<script src="map.js"></script>
+	</div>
+	
+	<div id="timelinediv">
+		<svg id="timeline" width="1000" height="500"></svg>
+		<svg id="timelineKeys" width="1000" height="125"></svg>
 		<script type="text/javascript">
 			// Create the static parts of the page:
 			drawTimelineStaticParts();
@@ -65,15 +75,10 @@
 			});
 		</script>
 	</div>
-
 </div>
-
-<iframe  src="timeline.html" width="59%" height ="350" name="timeline">Timeline</iframe>
 
 <iframe  class="box" src="Ages.html" width="39%" height ="350" name="agebarchart" frameBorder="0">AGE Barchart</iframe>
 
-<iframe id="map" src="statesmap.html" width="59%" height ="400" frameBorder="0">map</iframe>
- 
 <iframe  class="box" src="SLEchart.html" width="39%" height ="360" name="SLEbarchart" frameBorder="0">SLE Barchart</iframe>
 
 	
