--- a/SLEchart.html
+++ b/SLEchart.html
@@ -12,12 +12,12 @@
 <div id="myDiv" style="width: 700px; height: 500px;">
 	
 <script>
-    var A = [];
-    var B = [];
-    var B1 = true;
-    var B2 = true;
-    var B3 = true;
-    var B4 = true;
+    var sleA = [];
+    var sleB = [];
+    var sleB1 = true;
+    var sleB2 = true;
+    var sleB3 = true;
+    var sleB4 = true;
     
 
 
@@ -66,25 +66,25 @@
         });
         console.log(heard_of_SLE_BB_Array);
 
-		let heard_of_SLE_Array_Sum = getSumOfArray(current_member_Array,heard_of_SLE_Array,live_IN_county_Array, B1, B2, B3, B4); //get sum of jan array
-		let heard_of_SLE_SM_Array_Sum = getSumOfArray(current_member_Array,heard_of_SLE_SM_Array,live_IN_county_Array, B1, B2, B3, B4); 
-		let heard_of_SLE_museum_ad_Array_Sum = getSumOfArray(current_member_Array,heard_of_SLE_museum_ad_Array,live_IN_county_Array, B1, B2, B3, B4); 
-		let heard_of_SLE_website_Array_Sum = getSumOfArray(current_member_Array,heard_of_SLE_website_Array,live_IN_county_Array, B1, B2, B3, B4); 
-		let heard_of_SLE_story_Array_Sum = getSumOfArray(current_member_Array,heard_of_SLE_story_Array,live_IN_county_Array, B1, B2, B3, B4); 
-		let heard_of_SLE_tv_Array_Sum=getSumOfArray(current_member_Array,heard_of_SLE_tv_Array,live_IN_county_Array, B1, B2, B3, B4); 
-		let heard_of_SLE_BB_Array_Sum = getSumOfArray(current_member_Array, heard_of_SLE_BB_Array,live_IN_county_Array, B1, B2, B3, B4); 
-		let heard_of_SLE_online_ad_Array_Sum = getSumOfArray(current_member_Array,heard_of_SLE_online_ad_Array,live_IN_county_Array, B1, B2, B3, B4); 
-		let heard_of_SLE_other_Array_Sum=getSumOfArray(current_member_Array,heard_of_SLE_other_Array,live_IN_county_Array, B1, B2, B3, B4); 
+		let heard_of_SLE_Array_Sum = getSumOfArray(current_member_Array,heard_of_SLE_Array,live_IN_county_Array, sleB1, sleB2, sleB3, sleB4); //get sum of jan array
+		let heard_of_SLE_SM_Array_Sum = getSumOfArray(current_member_Array,heard_of_SLE_SM_Array,live_IN_county_Array, sleB1, sleB2, sleB3, sleB4); 
+		let heard_of_SLE_museum_ad_Array_Sum = getSumOfArray(current_member_Array,heard_of_SLE_museum_ad_Array,live_IN_county_Array, sleB1, sleB2, sleB3, sleB4); 
+		let heard_of_SLE_website_Array_Sum = getSumOfArray(current_member_Array,heard_of_SLE_website_Array,live_IN_county_Array, sleB1, sleB2, sleB3, sleB4); 
+		let heard_of_SLE_story_Array_Sum = getSumOfArray(current_member_Array,heard_of_SLE_story_Array,live_IN_county_Array, sleB1, sleB2, sleB3, sleB4); 
+		let heard_of_SLE_tv_Array_Sum=getSumOfArray(current_member_Array,heard_of_SLE_tv_Array,live_IN_county_Array, sleB1, sleB2, sleB3, sleB4); 
+		let heard_of_SLE_BB_Array_Sum = getSumOfArray(current_member_Array, heard_of_SLE_BB_Array,live_IN_county_Array, sleB1, sleB2, sleB3, sleB4); 
+		let heard_of_SLE_online_ad_Array_Sum = getSumOfArray(current_member_Array,heard_of_SLE_online_ad_Array,live_IN_county_Array, sleB1, sleB2, sleB3, sleB4); 
+		let heard_of_SLE_other_Array_Sum=getSumOfArray(current_member_Array,heard_of_SLE_other_Array,live_IN_county_Array, sleB1, sleB2, sleB3, sleB4); 
 
 
 
 
 //sumArray.push(children_age_group1_Array_Sum ,children_age_group2_Array_Sum ,children_age_group3_Array_Sum, children_age_group4_Array_Sum, no_childeren_Array_Sum   );
 
-A= [heard_of_SLE_Array_Sum[0], heard_of_SLE_SM_Array_Sum[0],heard_of_SLE_museum_ad_Array_Sum[0],heard_of_SLE_website_Array_Sum[0],heard_of_SLE_story_Array_Sum[0], heard_of_SLE_tv_Array_Sum[0],heard_of_SLE_BB_Array_Sum[0],heard_of_SLE_online_ad_Array_Sum[0], heard_of_SLE_other_Array_Sum[0]];
+sleA= [heard_of_SLE_Array_Sum[0], heard_of_SLE_SM_Array_Sum[0],heard_of_SLE_museum_ad_Array_Sum[0],heard_of_SLE_website_Array_Sum[0],heard_of_SLE_story_Array_Sum[0], heard_of_SLE_tv_Array_Sum[0],heard_of_SLE_BB_Array_Sum[0],heard_of_SLE_online_ad_Array_Sum[0], heard_of_SLE_other_Array_Sum[0]];
 //let newListA = [ a/766 for a in A];
 //console.log(A);
-B= [heard_of_SLE_Array_Sum[1], heard_of_SLE_SM_Array_Sum[1],heard_of_SLE_museum_ad_Array_Sum[1],heard_of_SLE_website_Array_Sum[1],heard_of_SLE_story_Array_Sum[1], heard_of_SLE_tv_Array_Sum[1],heard_of_SLE_BB_Array_Sum[1],heard_of_SLE_online_ad_Array_Sum[1], heard_of_SLE_other_Array_Sum[1]];
+sleB= [heard_of_SLE_Array_Sum[1], heard_of_SLE_SM_Array_Sum[1],heard_of_SLE_museum_ad_Array_Sum[1],heard_of_SLE_website_Array_Sum[1],heard_of_SLE_story_Array_Sum[1], heard_of_SLE_tv_Array_Sum[1],heard_of_SLE_BB_Array_Sum[1],heard_of_SLE_online_ad_Array_Sum[1], heard_of_SLE_other_Array_Sum[1]];
 //let newListB = [ a/b for a, b in (B,t)];
 //console.log(B);
 
@@ -243,11 +243,11 @@ function getSumOfArray(array1, array2, array3, Marion, Adjacent, Elsewhere, Out)
   //A=[70, 23, 29, 27, 42, 93,32,25,12];
   //B=[73, 25, 29, 30, 49, 81,32,25,12];
 
-  console.log(A);
+  console.log(sleA);
   let trace1 = {
   x: ['Family/Friends', 'Social Media', 'Ads at Museum', 'Our Website', 'A story in the Media', 'TV commercials', 'Billboards', 'Online Ads', 'Others'],
  
-  y:A ,
+  y:sleA ,
   name: '% of Members',
   marker: {color: '#2c7fb8'},
   type: 'bar'
@@ -255,7 +255,7 @@ function getSumOfArray(array1, array2, array3, Marion, Adjacent, Elsewhere, Out)
 
 let trace2 = {
   x: ['Family/Friends', 'Social Media', 'Ads at Museum', 'Our Website', 'A story in the Media', 'TV commercials', 'Billboards', 'Online Ads', 'Others'],
-  y: B,
+  y: sleB,
   name: '% of Non-members',
   marker: {color: '#e34a33'},
   type: 'bar'
