--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
 			});
 		</script>
 	</div>
+	
+	<div id="bargraphs">
+		<div id="agebarchart">
+		</div>
+		<div id="slebarchart">
+		</div>
+	</div>
 </div>
 
 <iframe  class="box" src="Ages.html" width="49%" height ="500" name="agebarchart" frameBorder="0">AGE Barchart</iframe>
