--- a/index.html
+++ b/index.html
@@ -36,21 +36,13 @@
 </div>
 
 <div id="vis">
-	<!-- This is how I set up side-by-side displays for project 1.
-		<svg id="map" width="49%" viewBox="0 0 500 500">
-		</svg>
-		<svg id="graph" width="49%" viewBox="0 0 500 500">
-			<text id='label' x='5' y='20'>Deaths per day</text>
-		</svg>
-	-->
-	
 	<div id="map">
 		<!-- TODO: Why does the map draw itself over the timeline if the map SVG isn't declared first? -->
 		<svg width="1000" height="600"></svg>
 		<script type="text/javascript" src="map.js"></script>
 	</div>
 	
-	<div id="timelinediv">
+	<div id="timelinediv" style="float: top;">
 		<svg id="timeline" width="1000" height="500"></svg>
 		<svg id="timelineKeys" width="1000" height="125"></svg>
 		<script type="text/javascript" src="timeline.js"></script>
@@ -77,11 +69,10 @@
 	</div>
 	
 	<div id="bargraphs">
-		<!-- TODO: Why won't these draw side by side? -->
-		<div id="agebarchart" style="width: 50%; height: 500px;">
+		<div id="agebarchart" style="width: 50%; height: 500px; float: left;">
 			<script type="text/javascript" src="Ages.js"></script>
 		</div>
-		<div id="slebarchart" style="width: 50%; height: 500px;">
+		<div id="slebarchart" style="width: 50%; height: 500px; float: right;">
 			<script type="text/javascript" src="SLEchart.js"></script>
 		</div>
 	</div>
