--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
 </div>
 
 <div id="vis">
+	<!-- TODO: Display the map below the bar graphs. -->
+	<!-- TODO: Resize the timeline and map dynamically. -->
+	
 	<div id="map">
 		<!-- TODO: Why does the map draw itself over the timeline if the map SVG isn't declared first? -->
 		<svg width="1000" height="600"></svg>
 		<script type="text/javascript" src="map.js"></script>
 	</div>
 	
-	<div id="timelinediv" style="float: top;">
+	<div id="timelinediv">
 		<svg id="timeline" width="1000" height="500"></svg>
 		<svg id="timelineKeys" width="1000" height="125"></svg>
 		<script type="text/javascript" src="timeline.js"></script>
@@ -76,6 +79,7 @@
 			<script type="text/javascript" src="SLEchart.js"></script>
 		</div>
 	</div>
+	
 </div>	
 </body>
 </html>
