--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link type="text/css" rel="stylesheet" href="css/timeline.css"/>
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 	<link type="text/css" rel="stylesheet" href="css/weather-icons.css"/>
+	<script type="text/javascript" src="constants.js"></script>
 	<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
 	<script type="text/javascript" src="https://d3js.org/topojson.v2.min.js"></script>
 	<script type="text/javascript" src="lib/plotly-latest.min.js"></script>
@@ -39,7 +40,7 @@
 	<!-- TODO: Resize the timeline and map dynamically: maybe using viewbox? -->
 	
 	<div id=filterdiv">
-		<svg id="filters" width="1000" height="100"></svg>	
+		<svg id="filters" width="1000" height="100"></svg>
 		<script type="text/javascript" src="filters.js"></script>
 	</div>
 	
