Changed About link to design doc on Google

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 	<div class="pagetitle" style="float: left;">Outdoor Exhibit Survey</div>
 	<div style="float: right;">
 		<form>
+		<!--
 			<input class="pagebutton" type="button" value="About"
 			onclick="window.location.href='about.html'" />
+		-->
+			<input class="pagebutton" type="button" value="About"
+			onclick="window.location.href='https://docs.google.com/document/d/1cQdle2dkwIltAZptB4byrzixM74GN1SnmJSggiWK--A/edit?usp=sharing'" />
 		</form>
 	</div>
 	<br/><br/>
